@@ -1,3 +1,6 @@
+10/05/17
+  -Added array writing
+
 09/29/17
   -Rewrote reply parser to handle bit/bool arrays
 
